# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: django-check.yml
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html
