[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alex Subach <alex_28.02@mail.ru>"]
readme = "README.md"
packages = [{include = "python_project_52"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
dj-database-url = "^1.2.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
